# neural_net_checklist

./: LICENSE  README.md  pyproject.toml
examples/: causal_transformer.py  cifar10_resnet18.py  mnist_lenet5.py
spikes/: batch_matmul_repro.py
src/neural_net_checklist/: torch_diagnostics.py  torch_recipe.py
src/neural_net_checklist/tests/: test_torch_diagnostics.py  test_torch_recipe.py
