[project]
name = "neural_net_checklist"
version = "1.0.0"
description = "A ready-to-use implementation of Andrei Karpathhy's \"recipe for training neural networks\""
authors = [
    {name = "Andreas Kirsch", email = "blackhc@gmail.com"},
]
dependencies = [
    "torch>=2.4.0",
    "pytest>=8.3.2",
    "numpy>=2.0.1",
    "tqdm>=4.66.5",
    "pillow>=10.4.0",
    "torchvision>=0.19.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.7",
]
